Fix CSS for image and symbol column for no wrap

--- a/src/app/coins/coins.component.css
+++ b/src/app/coins/coins.component.css
@@ -14,3 +14,11 @@
 .search {
     margin-bottom: 5px;
 }
+
+.coin-img {
+    float: left;
+}
+
+.coin-img-text {
+    overflow: hidden;
+}
